# wasm-websocket-rust-starter

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  Tiltfile  biome.json  conductor.json  mise.toml  package.json  test-ws-both-transports.html  test-ws-client.html  tsconfig.json  vite.config.mts
.github/workflows/: deploy.yml
cg-types/: Cargo.toml
cg-types/generators/: generateRustRouter.ts  generateTypescript.ts  package-lock.json  package.json  parseRouterFns.ts
cg-types/proc/: Cargo.toml
cg-types/proc/src/: lib.rs
cg-types/src/: lib.rs  pathfinder.rs  router.rs  types.rs  utils.rs
cg-types/src/router/: router_gen.rs  router_goal.rs
docs/architecture/: architecture.md  crate-structure.md  transport-agnostic-design.md
docs/development/: adding-routes.md  codegen.md  testing.md
docs/features/: router-adaptors.md  transport-toggle.md
docs/proposals/: rpc-handles.md
generators/: generateRustRouterSimple.ts  generateTypescript.ts
pathfinder-core/: Cargo.toml
pathfinder-core/src/: handler.rs  lib.rs
pathfinder-server/: Cargo.toml
pathfinder-server/src/: main.rs  transport.rs
shared-types/: Cargo.toml
shared-types/proc/: Cargo.toml
shared-types/proc/src/: lib.rs
shared-types/src/: context.rs  lib.rs  receiver.rs  storage.rs
shared-types/src/router/: mod.rs  router_gen.rs
src/: index.html  main.tsx  pathfinder.tsx  styles.css  useTheme.ts
src-rust/: lib.rs
src/examples/: transport-switcher.tsx  websocket-example.tsx
src/livestore/: adapter.ts  livestore.worker.ts  queries.ts  schema.ts
src/router/: enhancedObservable.test.ts  enhancedObservable.ts  index.ts  router.test.ts  router.ts  types.ts  wasmAdaptor.ts  websocket.test.ts  websocketAdaptor.ts
src/routes/: __root.tsx  index.tsx
