[workspace]
members = ["shared-types", "pathfinder-core", "pathfinder-server"]
resolver = "2"

[package]
name = "wasm-pathfinder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src-rust/lib.rs"

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
shared-types = { path = "shared-types" }
pathfinder-core = { path = "pathfinder-core" }
once_cell = "1.20"

[profile.release]
opt-level = "z"
lto = true
