[package]
name = "pathfinder-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pathfinder-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared-types = { path = "../shared-types" }
pathfinder-core = { path = "../pathfinder-core" }
