[package]
name = "shared-types"
version = "0.1.0"
edition = "2021"

[features]
default = []
codegen = ["derive-codegen/generate"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
derive-codegen = { version = "0.0.5", default-features = false }
shared-types-proc = { path = "./proc" }
chrono = "0.4"
